changes to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@ hs_err_pid*
 
 NetworkMarket.iml
 
-# User-specific stuff:
+# UserServant-specific stuff:
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/dictionaries
